address+rpcserver+tarorpc: allow addr with custom keys
