# rpcserver.go
@@ -26,6 +26,7 @@ import (
 	"github.com/lightninglabs/taro/tarogarden"
 	"github.com/lightninglabs/taro/tarorpc"
 	"github.com/lightningnetwork/lnd/build"
+	"github.com/lightningnetwork/lnd/keychain"
 	"github.com/lightningnetwork/lnd/signal"
 	"google.golang.org/grpc"
 	"gopkg.in/macaroon-bakery.v2/bakery"
@@ -804,13 +805,59 @@ func (r *rpcServer) NewAddr(ctx context.Context,
 	rpcsLog.Infof("[NewAddr]: making new addr: asset_id=%x, amt=%v, "+
 		"type=%v", assetID[:], in.Amt, asset.Type(genesis.Type))
 
-	// Now that we have all the params, we'll try to add a new address to
-	// the addr book.
-	addr, err := r.cfg.AddrBook.NewAddress(
-		ctx, genesis, groupKey, uint64(in.Amt),
-	)
-	if err != nil {
-		return nil, fmt.Errorf("unable to make new addr: %w", err)
+	var addr *address.AddrWithKeyInfo
+	switch {
+	// No key was specified, we'll let the address book derive them.
+	case in.ScriptKey == nil && in.InternalKey == nil:
+		// Now that we have all the params, we'll try to add a new
+		// address to the addr book.
+		addr, err = r.cfg.AddrBook.NewAddress(
+			ctx, genesis, groupKey, uint64(in.Amt),
+		)
+		if err != nil {
+			return nil, fmt.Errorf("unable to make new addr: %w",
+				err)
+		}
+
+	// Only the script key was specified.
+	case in.ScriptKey != nil && in.InternalKey == nil:
+		return nil, fmt.Errorf("internal key must also be specified " +
+			"if script key is specified")
+
+	// Only the internal key was specified.
+	case in.ScriptKey == nil && in.InternalKey != nil:
+		return nil, fmt.Errorf("script key must also be specified " +
+			"if internal key is specified")
+
+	// Both the script and internal keys were specified.
+	default:
+		scriptKey, err := unmarshalScriptKey(in.ScriptKey)
+		if err != nil {
+			return nil, fmt.Errorf("unable to decode script key: "+
+				"%w", err)
+		}
+
+		rpcsLog.Debugf("Decoded script key %x (internal %x, tweak %x)",
+			scriptKey.PubKey.SerializeCompressed(),
+			scriptKey.RawKey.PubKey.SerializeCompressed(),
+			scriptKey.Tweak[:])
+
+		internalKey, err := unmarshalKeyDescriptor(in.InternalKey)
+		if err != nil {
+			return nil, fmt.Errorf("unable to decode internal "+
+				"key: %w", err)
+		}
+
+		// Now that we have all the params, we'll try to add a new
+		// address to the addr book.
+		addr, err = r.cfg.AddrBook.NewAddressWithKeys(
+			ctx, genesis, groupKey, uint64(in.Amt), *scriptKey,
+			internalKey,
+		)
+		if err != nil {
+			return nil, fmt.Errorf("unable to make new addr: %w",
+				err)
+		}
 	}
 
 	// With our addr obtained, we'll marshal it as an RPC message then send
@@ -1250,4 +1297,65 @@ func marshallSendAssetEvent(
 	default:
 		return nil, fmt.Errorf("unknown event type: %T", eventInterface)
 	}
+}
+
+// unmarshalScriptKey parses the RPC script key into the native counterpart.
+func unmarshalScriptKey(rpcKey *tarorpc.ScriptKey) (*asset.ScriptKey, error) {
+	var (
+		scriptKey asset.ScriptKey
+		err       error
+	)
+
+	// The script public key is a Taproot key, so 32-byte x-only.
+	scriptKey.PubKey, err = schnorr.ParsePubKey(rpcKey.PubKey)
+	if err != nil {
+		return nil, err
+	}
+
+	// The key descriptor is optional for script keys that are completely
+	// independent of the backing wallet.
+	if rpcKey.KeyDesc != nil {
+		keyDesc, err := unmarshalKeyDescriptor(rpcKey.KeyDesc)
+		if err != nil {
+			return nil, err
+		}
+		scriptKey.TweakedScriptKey = &asset.TweakedScriptKey{
+			RawKey: keyDesc,
+
+			// The tweak is optional, if it's empty it means the key
+			// is derived using BIP 86.
+			Tweak: rpcKey.TapTweak,
+		}
+	}
+
+	return &scriptKey, nil
+}
+
+// unmarshalKeyDescriptor parses the RPC key descriptor into the native
+// counterpart.
+func unmarshalKeyDescriptor(
+	rpcDesc *tarorpc.KeyDescriptor) (keychain.KeyDescriptor, error) {
+
+	var (
+		desc keychain.KeyDescriptor
+		err  error
+	)
+
+	// The public key of a key descriptor is mandatory. It is enough to
+	// locate the corresponding private key in the backing wallet. But to
+	// speed things up (and for additional context), the locator should
+	// still be provided if available.
+	desc.PubKey, err = btcec.ParsePubKey(rpcDesc.RawKeyBytes)
+	if err != nil {
+		return desc, err
+	}
+
+	if rpcDesc.KeyLoc != nil {
+		desc.KeyLocator = keychain.KeyLocator{
+			Family: keychain.KeyFamily(rpcDesc.KeyLoc.KeyFamily),
+			Index:  uint32(rpcDesc.KeyLoc.KeyIndex),
+		}
+	}
+
+	return desc, nil
 }
